--- a/src/pages/Books/books.css
+++ b/src/pages/Books/books.css
@@ -1,7 +1,8 @@
-.book_list {
+.content_list {
   display: grid;
   gap: 26px;
-  width: 100%;
+  width: 60vw;
+  min-width: 80vw;
   align-items: center;
   justify-content: center;
   margin: 20px auto 0;
@@ -20,8 +21,8 @@
 }
 
 .card_img {
-  width: 150px;
-  min-width: 50px;
+  width: 180px;
+  min-width: 150px;
 }
 @media (max-width: 767px) {
   .card_img {
