--- a/src/pages/Books/books.css
+++ b/src/pages/Books/books.css
@@ -11,6 +11,7 @@
 
 .card {
   display: flex;
+  max-width: 50vw;
   padding: 15px;
   background-color: #fff;
   /* border: 3px solid #000; */
@@ -22,7 +23,7 @@
 
 .card_img {
   width: 180px;
-  min-width: 150px;
+  min-width: 180px;
 }
 @media (max-width: 767px) {
   .card_img {
