--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -4,3 +4,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.auth_form {
+  max-width: 360px;
+  margin: 60px auto;
+  padding: 40px;
+  border: 1px solid #ddd;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  background: #fff;
+}
