--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,51 @@ code {
 ul {
   list-style-type: none;
 }
+
+.homepage {
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+}
+.homepage_img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  gap: 20px;
+}
+
+.homepage_img img {
+  border: 2px solid #000;
+  border-radius: 50px;
+  padding: 35px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  transition: 1s;
+}
+
+.homepage_img img:hover {
+  transform: scale(1.08);
+}
+
+.animation_home {
+  animation: fadeinup 1s;
+}
+
+@keyframes fadeinup {
+  from {
+    opacity: 0;
+    transform: translateY(20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.author {
+  color: #393c3d;
+  font-size: 1rem;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 0.3rem;
+}
