--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -13,3 +13,16 @@
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
   background: #fff;
 }
+
+.login_buton {
+  background-color: teal;
+  border: none;
+  color: white;
+  padding: 12px;
+  margin: 12px 0;
+  box-shadow: 0 1px 6px #ccc;
+  width: 100%;
+  border-radius: 6px;
+  font-size: 18px;
+  cursor: pointer;
+}
