Fixing CSS Login part1

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ label span {
   margin-bottom: 6px;
 }
 input.logs {
-  padding: 8px 6px;
+  padding: 12px;
   font-size: 1em;
   color: #777;
   width: 100%;
