--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -4,6 +4,19 @@
   justify-content: center;
   align-items: center;
 }
+.container {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  max-width: 50vw;
+  margin: auto;
+}
+.login__third__party {
+  max-width: 360px;
+  background: #fff;
+  padding: 40px;
+}
 
 .auth_form {
   max-width: 360px;
@@ -23,6 +36,6 @@
   box-shadow: 0 1px 6px #ccc;
   width: 100%;
   border-radius: 6px;
-  font-size: 18px;
+  font-size: 1em;
   cursor: pointer;
 }
