--- a/src/global.css
+++ b/src/global.css
@@ -284,7 +284,7 @@ img {
   width: 100%;
   padding: 30px 0;
   box-sizing: border-box;
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
   background-color: #00bd68;
   font-family: 'Roboto', sans-serif;
   font-size: 1.625rem;
