--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+}
+
 /* INDEX */
 * {
   padding: 0;
@@ -250,7 +255,7 @@ img {
 
 /* SEARCH */
 .form_search {
-  margin: 30px;
+  /* margin: 30px; */
   display: flex;
   justify-content: center;
   flex-direction: column;
